Improve KDoubleNumInput slider

* Fixed crash on minimum == maximum
* Fixed incorrect slider value for exponentRatio != 1.0
* Correctly compute number of steps for small ranges
* Improve slider usability for large ranges and exponential sliders

BUG: 168022

svn path=/trunk/KDE/kdelibs/; revision=1060479